Fix the focus indicator on Ink buttons.
At one point, I made an attempt to fix the focus indicator outline on
buttons, but my fix was incomplete. I had specified an outline color and
offset, but not the style, and this prevented browsers from displaying
anything for the outline.

We're now just removing our `outline` definition entirely, using the
browser's native style instead. There's on exception in that we're
keeping a 2px gap between the outline and the button, preventing it from
overlapping borders.

There's also a fix for focus indicators in button groups. We now set a
`z-index: 1`, which should let it sit just above siblings in the same
container, helping the foucs indicator stand out.

Testing Done:
Tested focus indicators in Safari, Chrome, and Firefox.

Reviewed at https://reviews.reviewboard.org/r/14206/

--- a/src/ink/less/themes/default/components/button.theme.less
+++ b/src/ink/less/themes/default/components/button.theme.less
@@ -229,7 +229,7 @@
       @state-focused: {
         color: var(--_ink-c-button-state-fg);
         outline-offset: 2px;
-        outline: var(--ink-c-button-hover-border-color);
+        z-index: 1;
       };
 
       /*
